package game.board;


 class Board  {

	public    int nbOfTile;

	public    int length;

	public    int widht;


	/**
	* auto gen docs
	**/
 	public    Board(int length,int widht) ;

	/**
	* auto gen docs
	* @return :int:
	**/
 	public  int  getNumberOfTile() {

		return 0;
	}


}