package game.board;


 class Desert implement Tile  {

	public    Resources resourcesHarvest;


	/**
	* auto gen docs
	**/
 	public    Desert(int x,int y) ;


}