package game.board;


 class Forest implement Tile  {

	public    Resources resourcesHarvest;


	/**
	* auto gen docs
	**/
 	public    Forest(int x,int y) ;


}