package game.board;


 class Hills implement Tile  {

	public    Resources resourcesHarvest;


	/**
	* auto gen docs
	**/
 	public    Hills(int x,int y) ;


}