package game.board;


 class Plaine  {

	public    Resources resourcesHarvest;


	/**
	* auto gen docs
	**/
 	public    Plaine(int x,int y) ;


}