package assoc;


 class FarmGame implement Game  {


	/**
	* auto gen docs
	* @return :void:
	**/
 	public  void  FarmGame(Board board) ;


}