package assoc;


 interface Resources  {



}