package assoc;


 class Sand  extends Resources {

	public static final  int REWARD;

	public static final  int COEF_ASK;



}