package assoc;


 class Stone  extends Resources {

	public static final  int REWARD;

	public static final  int COEF_ASK;



}