package assoc;


 class WarGame implement Game  {


	/**
	* auto gen docs
	* @return :void:
	**/
 	public  void  WarGame(Board board) ;


}