package assoc;


 class Wheat  extends Resources {

	public static final  int REWARD;

	public static final  int COEF_ASK;



}