package assoc;


 class Wood  extends Resources {

	public static final  int REWARD;

	public static final  int COEF_ASK;



}